--- a/Contents/Resources/English.lproj/XDict Help/02_reference/index.html
+++ b/Contents/Resources/English.lproj/XDict Help/02_reference/index.html
@@ -16,6 +16,10 @@
 
 	<body>
 		<div id="navi-bar">
+			<div class="edit-script-link">
+				<a onclick="return runHelpScriptWithBundleRoot(this)" href="assets/editScript.scpt">Edit Script</a>
+			</div>
+			<div class="left-contents">
 			<div class="to-root">
 				<!-- InstanceBeginEditable name="to-root" --><a href="../index.html">XDict Help</a><!-- InstanceEndEditable -->
 			</div>
@@ -120,15 +124,13 @@ Debugging
 - dump
 </option>
 </select>
-			<div class="edit-script-link">
-				<a onclick="return runHelpScriptWithBundleRoot(this)" href="assets/editScript.scpt">Edit Script</a>
 			</div>
 		</div>
 		<!-- InstanceBeginEditable name="prev-next-item" --><div class="prev-next-item"><a href="../01_synopsis/index.html"><span class="navibar-prev">Synopsis</span></a>|<a href="../03_history/index.html"><span class="navibar-next">History</span></a></div><!-- InstanceEndEditable -->
 		<div id="contents">
 		<h1>XDict Reference </h1>
 <ul>
-<li>Version : 1.6.1</li>
+<li>Version : 1.6.2</li>
 <li>Author : Tetsuro KURITA <a href="mailto:tkurita@mac.com">tkurita@mac.com</a></li>
 </ul>
 <p>XDict is an associative list type data collection. </p>
@@ -216,6 +218,7 @@ Debugging
 <p>Dump keys and values in XDict as text. Use this method for debugging.</p>
 
 		</div>
+		<!-- InstanceBeginEditable name="prev-next-item" --><div class="prev-next-item"><a href="../01_synopsis/index.html"><span class="navibar-prev">Synopsis</span></a>|<a href="../03_history/index.html"><span class="navibar-next">History</span></a></div><!-- InstanceEndEditable -->
 	</body>
 
 </html>
