--- a/Contents/Resources/English.lproj/XDict Help/03_history/index.html
+++ b/Contents/Resources/English.lproj/XDict Help/03_history/index.html
@@ -26,6 +26,21 @@
           <h1>History</h1>
           <csobj csref="../../../_Components/history-en.html" occur="95" t="Component">
             <ul>
+              <li>1.6.2 -- 2015-09-04
+                <ul>
+                  <li>Internal Changes.</li>
+                </ul>
+              </li>
+              <li>1.6.1 -- 2012-05-10
+                <ul>
+                  <li>Update Help.
+                    <ul>
+                      <li>Improved layout for small windows of the Help Viewer.</li>
+                      <li>Fixed : &quot;Edit Link&quot; and &quot;Clipboard Icon&quot; links does not work in Mac OS X 10.6.</li>
+                    </ul>
+                  </li>
+                </ul>
+              </li>
               <li>1.6 -- 2010-02-15
                 <ul>
                   <li>Removed dependecy on &quot;ShowHelpBook&quot;.</li>
