--- a/Contents/Resources/Japanese.lproj/XDict Help/03_history/index.html
+++ b/Contents/Resources/Japanese.lproj/XDict Help/03_history/index.html
@@ -26,6 +26,21 @@
           <h1>History</h1>
           <csobj csref="../../../_Components/history-ja.html" occur="31" t="Component">
             <ul>
+              <li>1.6.2 -- 2015-09-04
+                <ul>
+                  <li>内部コードの微修正。</li>
+                </ul>
+              </li>
+              <li>1.6.1 -- 2012-05-10
+                <ul>
+                  <li>ヘルプをアップデート。
+                    <ul>
+                      <li>レイアウトを小さいウインドウでの表示に適した物にした。</li>
+                      <li>「Edit Script」「クリップボードアイコン」など、Mac OS X 10.6 で動作するようにした。</li>
+                    </ul>
+                  </li>
+                </ul>
+              </li>
               <li>1.6 -- 2010-02-15
                 <ul>
                   <li>ShowHelpBook への依存性を無くした。</li>
