--- a/Contents/Resources/Japanese.lproj/XDict Help/index.html
+++ b/Contents/Resources/Japanese.lproj/XDict Help/index.html
@@ -18,11 +18,11 @@
     <div id="side-column">
     <div class="sidecolumn-box">
     <div class="sidecolumn-boxtitle">
-      <a href="pages/license-ja.html" target="Content">ライセンス</a></div>
+      <a href="pages/license-ja.html">ライセンス</a></div>
     </div>
     <div class="sidecolumn-box">
     <div class="sidecolumn-boxtitle">
-      <a href="pages/donation-ja.html" target="Content">寄付</a></div>
+      <a href="pages/donation-ja.html">寄付</a></div>
       <p>もし、このソフトウェアを気に入っていただければ、寄付をいただけると助かります。</p>
      </div>
     <hr />
