--- a/Contents/Resources/Japanese.lproj/XDict Help/pages/donation-ja.html
+++ b/Contents/Resources/Japanese.lproj/XDict Help/pages/donation-ja.html
@@ -37,7 +37,7 @@
             <p>僕としては、PayPal を使っていただけると助かります。僕が他のソフトウェアの寄付を行う際に都合がいいのです。</p>
             <h3>Vecror シェアレジ</h3>
             <p><a href="http://www.vector.co.jp/" target="_top">Vector</a> のシェアレジを使っていただくこともできますが、手数料が非常に高いので、PayPal を使っていただくことを希望します。</p>
-            <p><a href="https://sw.vector.co.jp/swreg/detail.info?srno=SR019012&amp;site=v&amp;sid=31578804A1313273" target="_top">Script factory Products aaa</a></p>
+            <p><a href="https://sw.vector.co.jp/swreg/detail.info?srno=SR019012&amp;site=v&amp;sid=31578804A1313273" target="_top">Script factory Products</a></p>
             <p>という名前で登録されております。上記のサイトから手続きを行ってください。一口500円です。</p>
             <h3>銀行振込</h3>
             <p>振込先</p>
@@ -91,7 +91,7 @@
           </csobj>
         <!-- InstanceEndEditable --></div>
       <div class="footer">
-        <p>This page was last built on <csobj format="MedDate" h="11" region="0" t="DateTime" w="67">Tue, Mar 20, 2012</csobj> ; <csobj format="LongTime" h="11" region="0" t="DateTime" w="43">8:18:49 PM</csobj> . Thanks for checking it out!</p>
+        <p>This page was last built on <csobj format="MedDate" h="11" region="0" t="DateTime" w="71">Mon, Nov 17, 2014</csobj> ; <csobj format="LongTime" h="11" region="0" t="DateTime" w="43">1:40:36 PM</csobj> . Thanks for checking it out!</p>
       </div>
     </body>
 
